Form validation is working

--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -46,7 +46,7 @@
             </div> <!end of HowToContact>
             <div id="GetInContact">
                 <h1 id="GetInContactH1">Get In Contact</h1>
-                <form id="GetInContactFrm" onsubmit="event.preventDefault(); ValidateForm();">
+                <form id="GetInContactFrm" action="FormSubmitted.html" onsubmit="ValidateForm();">
                     <p id="formText">Name*</p>  <input type="text" required></input>
                     <p id="formText">Email*</p><input type="email" required></input>
                     <p id="formText">Age</p><input type="number"></input>
