--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="About.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hair Care Tips</title>
+    <title>About</title>
 </head>
 <body>
     <div id="WholePage">
