Other than text needing to be filled. I am done

--- a/Assessment/FormSubmitted.html
+++ b/Assessment/FormSubmitted.html
@@ -26,9 +26,14 @@
                 </nav>
             </div> <!MenuBar end>
             <div id="FormSubmitted">
-                <h1 id="FormSubmittedHeading">Thank you, I will get in touch soon!</h1>
+                <h1 id="FormSubmittedHeading">Thank you</h1>
             </div> <!end of FormSubmitted>
         </div> <!end of MenuWrapper>
+        <div id="MainPage">
+            <div id="MyJourney">
+                <h1 id="MyJourneyH1">I will be in contact with you soon! :)</h1>
+            </div> <!end of MyJourney>
+        </div> <!end of MainPage>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: 
             <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
