started fleshing out the page

--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -32,16 +32,19 @@
             <div id="MyJourney">
                 <h1 id="MyJourneyH1">My Journey</h1>
                 <p id="MyJourneyText">
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
+                    From the age of 17, I would heat style my hair without any protection. When I was 18, I started dip dying my hair with semi-permanent box dye. 
+                    In August 2018, I made the worst decision ever and dyed my hair blonde all over with a box dye. Already at that point it was dry and extremely damaged. 
+                    In December 2018 I had it dyed red by my hairdresser; it turned out brighter than I wanted but I let it fade out and didn’t dye it for a while. <br>
+                    In March 2019 I had enough of the pink mess and dyed it brown using a box dye. 
+                    Throughout the year it had faded on the ends where my previously bleached hair was going out. It looked very ‘blocky’, 
+                    so in December 2019 I had a professional balayage.
+                    I was in love with the results, but it needed to be a working progress in order for the colouring to look more natural. 
+                    I experimented with the Curly Girl Method (CGM) from February 2020,
+                    but it was a lot of effort to keep and I just didn’t have the time or the patience with the transition period. 
+                    Since then, I have only been using natural based hair products without any sulphates, silicones or parabens. <br>
+                    My goal is to grow long healthy hair. I have done a lot of research to find out the ‘ins’ and ‘outs’ of my hair type and the best ways to look after it. 
+                    With everything I have learnt, I hope to help and inspire others, just as I have been. <br>
+                    My hair is my crown I wear every day.
                 </p>
             </div> <!end of MyJourney>
         </div> <!end of MainPage>
