--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -31,17 +31,10 @@
         <div id="MainPage">
             <div id="LatestBlog">
                 <h1 id="LatestBlogH1">Latest Blog</h1>
+                <h2>My Routine</h2>
                 <p id="LatestBlogText">
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
+                    
+
                 </p>
             </div> <!end of LatestBlog>
             <div id="LatestPhotos">
