changed breaks into paragraphs

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -32,10 +32,29 @@
             <div id="LatestBlog">
                 <h1 id="LatestBlogH1">Latest Blog</h1>
                 <h2>My Routine</h2>
-                <p id="LatestBlogText">
+                <div id="LatestBlogText">
+                    <p>
+                        Washing: <br>
+                        My hair routine is now very simplistic. Once a week I do a scalp treatment and nutrition mask overnight. 
+                        I then wash these out the next day with a natural shampoo and conditioner. 
+                        I always use cool water when washing my hair to prevent further damage and frizz. 
+                        When applying the shampoo, I use a scalp massager to both exfoliate my scalp as well as help to promote hair growth. 
+                        I will apply shampoo twice to only my scalp, before applying conditioner. 
+                        I will only apply conditioner to the ends of my hair and leave it on for a while. 
+                        At the end of my shower, I will rinse my hair with cold water and occasionally I will do an apple cider vinegar hair rinse.
+                    </p>
+                   <p>
+                        When I step out of the shower, I’ll squeeze out any excess water and loosely wrap my hair in a microfibre towel turban.
+                        Once I am dressed, I will remove the towel and apply the hair primer and leave-in conditioner to my hair. I comb out any tangles and leave to air dry.
+                   </p>
+                   <p>
+                       Once my hair is dry, I’ll apply a couple drops of hair oil to the ends of my hair. This helps to reduce frizz and adds shine.
+                   </p>
+                   <p>
+                       
+                   </p>
                     
-
-                </p>
+                </div>
             </div> <!end of LatestBlog>
             <div id="LatestPhotos">
                 <h1 id="LatestPhotosH1">Latest Photos</h1>
