added text into homepage latest blog, increases length of box to accomidate all the text

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -51,7 +51,27 @@
                        Once my hair is dry, I’ll apply a couple drops of hair oil to the ends of my hair. This helps to reduce frizz and adds shine.
                    </p>
                    <p>
-                       
+                        In between my weekly wash, I’ll cleanse my scalp if I need to with a co-wash. 
+                        I find this really helps to freshen up my hair without drying the ends out, compared to if I were to wash with shampoo. 
+                        I will do this every 2-3 days and my after shower hair care remains the same.
+                   </p>
+                   <p>
+                        Daily Haircare: <br>
+                        To prevent damage to my hair, I will keep it in a protective hairstyle most of the time. These include braids and buns. 
+                        I’ll either use an invisible scrunchy or hair stick. These don’t pull on hair and they can very stylish. 
+                        I will regularly apply a hair oil to the ends of my hair if I need to. 
+                   </p>
+                   <p>
+                        When I go to bed, I brush my hair. Starting from the bottom, gently with my wooden brush. 
+                        I apply a little hair oil, then braid my hair loosely securing with a soft scrunchy. 
+                        Unless I am doing an overnight hair mask, I will sleep on a silk pillowcase.
+                   </p>
+                   <p>
+                       Monthly Haircare: <br>
+                       Every month I will do the ‘search and destroy’ method. 
+                       To do this, I divide my hair into inch wide sections and search for any split ends along the length of my hair. 
+                       When I find one, I snip the split end using a sharp pair of scissors (use scissors responsibly). 
+                       This can be a long process, but also a therapeutic one. 
                    </p>
                     
                 </div>
