changed adaptive css

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -66,7 +66,7 @@
                         I apply a little hair oil, then braid my hair loosely securing with a soft scrunchy. 
                         Unless I am doing an overnight hair mask, I will sleep on a silk pillowcase.
                    </p>
-                   <p>
+                   <p id="lastParagraph">
                        Monthly Haircare: <br>
                        Every month I will do the ‘search and destroy’ method. 
                        To do this, I divide my hair into inch wide sections and search for any split ends along the length of my hair. 
