added in rule of thumb text

--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -33,7 +33,7 @@
                 <h1 id="MyJourneyH1">My Journey</h1>
                 <div id="MyJourneyText">
                    <p>
-                       From the age of 17, I would heat style my hair without any protection. When I was 18, I started dip dying my hair with semi-permanent box dye. 
+                        From the age of 17, I would heat style my hair without any protection. When I was 18, I started dip dying my hair with semi-permanent box dye. 
                         In August 2018, I made the worst decision ever and dyed my hair blonde all over with a box dye. Already at that point it was dry and extremely damaged. 
                         In December 2018 I had it dyed red by my hairdresser; it turned out brighter than I wanted but I let it fade out and didn’t dye it for a while. 
                     </p>
@@ -50,7 +50,7 @@
                         My goal is to grow long healthy hair. I have done a lot of research to find out the ‘ins’ and ‘outs’ of my hair type and the best ways to look after it. 
                         With everything I have learnt, I hope to help and inspire others, just as I have been.
                     </p>
-                    <p>
+                    <p id="LastParagraph">
                         My hair is my crown I wear every day.
                     </p>
                     
