--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -31,18 +31,23 @@
         <div id="MainPage">
             <div id="RuleOfThumb">
                 <h1 id="RuleOfThumbH1">Rules of Thumb</h1>
-                <p id="RuleOfThumbText">
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                </p>
+                <div id="RuleOfThumbText">
+                    <p>Washing:</p>
+                        <ul>
+                            <li>Shampoo scalp only, if not it will dry out ends.</li>
+                            <li>Be gentle when washing. Don’t use fingernails or harsh rubbing as it can damage your scalp and cause tangles.</li>
+                            <li>Condition the ends of your hair only, if put on scalp it can cause build-up of sebum.</li>
+                            <li>Use a microfibre towel, ‘normal’ towels catch hair fibres which causes frizz.</li>
+                            <li>Never rub hair with towel, this cause hair damage; hair loss and causes frizz.</li>
+                        </ul>
+                    <p>Daily:</p>
+                    <ul id="DailyUl">
+                        <li>Use a wooden/boar bristle brush, as this distributes hair oils throughout hair and prevetns static.</li>
+                        <li>Put hair in protective hair styles, this protects against enivromental damage.</li>
+                        <li>When putting hair up, use invisible scrunchies or hair sticks</li>
+                        <li>Use a silk pillowcase, this protects hair overnight as it prevents friction which induces stress on hair fibres and causes frizz.</li>
+                    </ul>
+                </div>
             </div> <!end of RuleOfThumb>
             <div id="HairProducts">
                 <h1 id="HairProductsH1">Hair Products I Use</h1>
