finished the text, just need the photos

--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -42,7 +42,7 @@
                         </ul>
                     <p>Daily:</p>
                     <ul id="DailyUl">
-                        <li>Use a wooden/boar bristle brush, as this distributes hair oils throughout hair and prevetns static.</li>
+                        <li>Use a wooden/boar bristle brush, as this distributes hair oils throughout hair and prevents static.</li>
                         <li>Put hair in protective hair styles, this protects against enivromental damage.</li>
                         <li>When putting hair up, use invisible scrunchies or hair sticks</li>
                         <li>Use a silk pillowcase, this protects hair overnight as it prevents friction which induces stress on hair fibres and causes frizz.</li>
@@ -51,6 +51,19 @@
             </div> <!end of RuleOfThumb>
             <div id="HairProducts">
                 <h1 id="HairProductsH1">Hair Products I Use</h1>
+                    <ul id="HairProductsInUse">
+                        <li>Faith in native lavender & geranium (DIY co-wash)</li>
+                        <li>Garnier banana hair food</li>
+                        <li>Innate life scalp treatment (normal scalp)</li>
+                        <li>Innate life rose hair elixir</li>
+                        <li>Innate life Herbal hair mask</li>
+                        <li>Innate life Neroli hair primer</li>
+                        <li>Innate life Herbal shampoo + conditioner</li>
+                        <li>Innersense “sweet spirit” leave-in conditioner</li>
+                        <li>Scalp massager</li>
+                        <li>Apple cider vinegar with lavender essential oil</li>
+                        <li>Microfibre towel turban</li>
+                    </ul>
             </div>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
