added the photos to the homepage

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -78,6 +78,17 @@
             </div> <!end of LatestBlog>
             <div id="LatestPhotos">
                 <h1 id="LatestPhotosH1">Latest Photos</h1>
+                <div id="PhotoContainerRow">
+                    <div id="PhotoContainerColumn">
+                        <img id="RecentImg" src="Photos/recent1.jpg" alt ="A photo of my hair outside on a sunny day.">
+                    </div>
+                    <div id="PhotoContainerColumn">
+                        <img id="RecentImg" src="Photos/recent2.jpg" alt ="A photo of my hair outside on a sunny day.">
+                    </div>
+                    <div id="PhotoContainerColumn">
+                        <img id="RecentImg" src="Photos/recent3.jpg" alt ="A photo of my hair outside on a sunny day." style="padding-top: 35%;">
+                    </div>
+                </div>
             </div>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
