fixed a sixing issue with text area

--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -63,7 +63,7 @@
                     </p>
                     <p>Any other comments?</p>
                     <label for="AdditionalComments"></label>
-                    <textarea name="comments" rows = "7" cols = "70"></textarea>
+                    <textarea id="comments" name="comments" rows = "7" cols = "60"></textarea>
                     <p><button>Submit</button></p>
                 </form>
             </div>
