--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -32,16 +32,8 @@
             <div id="HowToContact">
                 <h1 id="HowToContactH1">How To Contact Me</h1>
                 <p id="HowToContactText">
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
-                    This is just test text.<br>
+                    Please fill in the form below and press submit once complete. The asterixed fields show compulsroy completion.<br>
+                    Once the form has been submitted I will be able to contact you ASAP. Thank you!
                 </p>
             </div> <!end of HowToContact>
             <div id="GetInContact">
@@ -49,7 +41,7 @@
                 <form id="GetInContactFrm" action="FormSubmitted.html" onsubmit="ValidateForm();">
                     <p id="formText">Name*</p>  <input type="text" required></input>
                     <p id="formText">Email*</p><input type="email" required></input>
-                    <p id="formText">Age</p><input type="number"></input>
+                    <p id="formText">Age*</p><input id="Age" type="number" required></input>
                     <p id="formText">
                         <p id="HairTypeInput">Hair type*</p>
                         <div id="CheckBoxes">
