--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	  </head>
       <body>
 			<h1>Index</h1>
-			<a href="/Website-Tech/week_1/index">Week 1 - Index</a>
+			<a href="/Website-Tech/week_1/index.html">Week 1 - Index</a>
 			<br>
-			<a href="/Website-Tech/week_2/index"> Week 2 - Index</a>
+			<a href="/Website-Tech/week_2/index.html"> Week 2 - Index</a>
 			<br>
-			<a href="/Website-Tech/week_3/index"> Week 3 - Index</a>
+			<a href="/Website-Tech/week_3/index.html"> Week 3 - Index</a>
 			<br>
-			<a href="/Website-Tech/week_4/index"> Week 4 - Index</a>
+			<a href="/Website-Tech/week_4/index.html"> Week 4 - Index</a>
+			<br>
+			<a href="Assessment/index.html"> Assessment - Index</a>
       </body>
 </html>
