--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -10,7 +10,7 @@
     <div id="WholePage">
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
-        </div> <!end of logo>
+        </div> 
         <div id="MenuWrapper">
             <div class="HamIcon" onclick="toggleClass()">
                 <h2 id="HamIconText"> &#9776; </h2>
@@ -23,11 +23,11 @@
                         <li><a href="ContactMe.html">Contact Me</a></li>
                     </ul>
                 </nav>
-            </div> <!MenuBar end>
+            </div>
             <div id="Home">
                 <h1 id="HomeHeading">Home</h1>
-            </div> <!end of Home>
-        </div> <!end of MenuWrapper>
+            </div> 
+        </div>
         <div id="MainPage">
             <div id="LatestBlog">
                 <h1 id="LatestBlogH1">Latest Blog</h1>
@@ -75,7 +75,7 @@
                    </p>
                     
                 </div>
-            </div> <!end of LatestBlog>
+            </div>
             <div id="LatestPhotos">
                 <h1 id="LatestPhotosH1">Latest Photos</h1>
                 <div class="PhotoContainerRow">
@@ -90,13 +90,13 @@
                     </div>
                 </div>
             </div>
-        </div> <!end of MainPage>
+        </div>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: 
             <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
             </p>        
         </div>
-    </div><!end of WholePage>
+    </div>
     <script src="HamburgerMenu.js"></script>
 </body>
 </html>
