--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -10,7 +10,7 @@
     <div id="WholePage">
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
-        </div> <!end of logo>
+        </div>
         <div id="MenuWrapper">
             <div class="HamIcon" onclick="toggleClass()">
                 <h2 id="HamIconText"> &#9776; </h2>
@@ -23,11 +23,11 @@
                         <li><a href="ContactMe.html">Contact Me</a></li>
                     </ul>
                 </nav>
-            </div> <!MenuBar end>
+            </div>
             <div id="About">
                 <h1 id="AboutHeading">About</h1>
-            </div> <!end of About>
-        </div> <!end of MenuWrapper>
+            </div>
+        </div>
         <div id="MainPage">
             <div id="MyJourney">
                 <h1 id="MyJourneyH1">My Journey</h1>
@@ -55,14 +55,14 @@
                     </p>
                     
                 </div>
-            </div> <!end of MyJourney>
-        </div> <!end of MainPage>
+            </div>
+        </div>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: 
             <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
             </p>        
         </div>
-    </div><!end of WholePage>
+    </div>
     <script src="HamburgerMenu.js"></script>
 </body>
 </html>
