--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -10,7 +10,7 @@
     <div id="WholePage">
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
-        </div> <!end of logo>
+        </div>
         <div id="MenuWrapper">
             <div class="HamIcon" onclick="toggleClass()">
                 <h2 id="HamIconText"> &#9776; </h2>
@@ -23,11 +23,11 @@
                         <li><a href="ContactMe.html">Contact Me</a></li>
                     </ul>
                 </nav>
-            </div> <!MenuBar end>
+            </div>
             <div id="HairCareTips">
                 <h1 id="HairCareTipsHeading">Hair Care Tips</h1>
-            </div> <!end of HairCareTips>
-        </div> <!end of MenuWrapper>
+            </div>
+        </div>
         <div id="MainPage">
             <div id="RuleOfThumb">
                 <h1 id="RuleOfThumbH1">Rules of Thumb</h1>
@@ -48,7 +48,7 @@
                         <li>Use a silk pillowcase, this protects hair overnight as it prevents friction which induces stress on hair fibres and causes frizz.</li>
                     </ul>
                 </div>
-            </div> <!end of RuleOfThumb>
+            </div>
             <div id="HairProducts">
                 <h1 id="HairProductsH1">Hair Products I Use</h1>
                     <ul id="HairProductsInUse">
@@ -65,13 +65,13 @@
                         <li>Microfibre towel turban</li>
                     </ul>
             </div>
-        </div> <!end of MainPage>
+        </div>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: 
             <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
             </p>        
         </div>
-    </div><!end of WholePage>
+    </div>
     <script src="HamburgerMenu.js"></script>
 </body>
 </html>
