added a simple privacy policy that doesn't actually have any legal meaning. This is for education only and no data is stored

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -93,8 +93,8 @@
         </div>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: 
-            <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
-            </p>        
+                <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender |</a>
+                <a id="PrivacyPolicyLink" href="PrivacyPolicy.html">| Our Privacy Policy</a>       
         </div>
     </div>
     <script src="HamburgerMenu.js"></script>
