added info concerning GDPR 8 rights

--- a/Assessment/PrivacyPolicy.html
+++ b/Assessment/PrivacyPolicy.html
@@ -33,7 +33,7 @@
                 <h1 id="MyJourneyH1">Your Data is in Good Hands</h1>
                 <div id="MyJourneyText">
                    <p id="LastParagraph">
-                        The only data we gather from you is the data in the form you choose to submit.
+                        The only data we gather from you is the data in the form you choose to submit, the data is processed so that we can help to give you a hair care plan.
                         At any time you can contact us here at customerService@JadieLavendar.com to find out if we have any stored data on you and if you would like us to delete it.
                         We may in the future use third party analytic systems, if that does happen this page will be updated a week in advance to warn our customers.
                     </p>
