making alterations due to review

--- a/Assessment/FormSubmitted.html
+++ b/Assessment/FormSubmitted.html
@@ -30,8 +30,8 @@
             </div> <!end of FormSubmitted>
         </div> <!end of MenuWrapper>
         <div id="MainPage">
-            <div id="MyJourney">
-                <h1 id="MyJourneyH1">I will be in contact with you soon! :)</h1>
+            <div id="Responce">
+                <p class="PageHeadings" id="ResponceHeading">I will be in contact with you soon! :)</p>
             </div> <!end of MyJourney>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
