--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -30,7 +30,7 @@
         </div>
         <div id="MainPage">
             <div id="LatestBlog">
-                <h1 id="LatestBlogH1">Latest Blog</h1>
+                <p class="PageHeadings">Latest Blog</p>
                 <h2>My Routine</h2>
                 <div id="LatestBlogText">
                     <p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="LatestPhotos">
-                <h1 id="LatestPhotosH1">Latest Photos</h1>
+                <p class="PageHeadings">Latest Photos</p>
                 <div class="PhotoContainerRow">
                     <div class="PhotoContainerColumn">
                         <img class="RecentImg" src="Photos/recent1.jpg" alt ="A photo of my hair outside on a sunny day.">
