--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -25,12 +25,12 @@
                 </nav>
             </div>
             <div id="HairCareTips">
-                <h1 id="HairCareTipsHeading">Hair Care Tips</h1>
+                <h1 id="HairCareTipsH1">Hair Care Tips</h1>
             </div>
         </div>
         <div id="MainPage">
             <div id="RuleOfThumb">
-                <h1 id="RuleOfThumbH1">Rules of Thumb</h1>
+                <p class="PageHeadings" id="RuleOfThumbHeading">Rules of Thumb</p>
                 <div id="RuleOfThumbText">
                     <p>Washing:</p>
                         <ul>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div id="HairProducts">
-                <h1 id="HairProductsH1">Hair Products I Use</h1>
+                <p class="PageHeadings" id="HairProductsHading">Hair Products I Use</p>
                     <ul id="HairProductsInUse">
                         <li>Faith in native lavender & geranium (DIY co-wash)</li>
                         <li>Garnier banana hair food</li>
