making alterations due to review

--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div id="HairProducts">
-                <p class="PageHeadings" id="HairProductsHading">Hair Products I Use</p>
+                <p class="PageHeadings" id="HairProductsHeading">Hair Products I Use</p>
                     <ul id="HairProductsInUse">
                         <li>Faith in native lavender & geranium (DIY co-wash)</li>
                         <li>Garnier banana hair food</li>
