making alterations due to review

--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -53,7 +53,7 @@
                     </div>
                     <p>Any other comments?</p>
                     <textarea id="comments" name="comments" rows = "7" cols = "58"></textarea>
-                    <p><button>Submit</button></pp>
+                    <p><button>Submit</button></p>
                 </form>
             </div>
         </div>
