--- a/Assessment/index.html
+++ b/Assessment/index.html
@@ -6,6 +6,6 @@
     <title>Assessment Index</title>
 </head>
 <body>
-    <a href="HomePage.html"> HomePage</a>
+    <a href="homePage.html"> HomePage</a>
 </body>
 </html>
